--- a/templates/actor/parts/actor-header-monster-minion.html
+++ b/templates/actor/parts/actor-header-monster-minion.html
@@ -1,2 +1,10 @@
 <h3>Monster Minion</h3>
-<p>Resources go here</p>
+<label>Health Die</label>
+<div class="flex-col pr-0 flex-s-1">
+  {{> "systems/earthland/templates/partials/dice/select.html"
+    dice=system.health_die.value
+    edit=true
+    selectName='system.health_die'
+  }}
+</div>
+
