--- a/templates/actor/parts/actor-body-monster-pet.html
+++ b/templates/actor/parts/actor-body-monster-pet.html
@@ -1,78 +1,106 @@
-{{!-- Sheet Tab Navigation --}}
-<nav class="sheet-tabs tabs" data-group="primary">
-  {{!-- Default tab is specified in actor-sheet.mjs --}}
-  <a class="item" data-tab="traits">Traits</a>
-  <a class="item" data-tab="features">Features</a>
-  <a class="item" data-tab="relationships">Relationships</a>
-  <a class="item" data-tab="milestones">Goals</a>
-  <a class="item" data-tab="effects">Effects</a>
-  <a class="item" data-tab="notes">Notes</a>
-</nav>
-
 {{!-- Sheet Body --}}
-<section class="sheet-body">
+<section class="grid grid-3col">
+  <div class="attributes flexcol">
+    {{> "systems/earthland/templates/actor/parts/actor-attributes.html"}}
+  </div>
 
-  {{!-- Owned Traits Tab --}}
-  <div class="tab traits" data-group="primary" data-tab="traits">
-    <section class="grid grid-3col">
-        <div class="attributes flexcol">
-          {{> "systems/earthland/templates/actor/parts/actor-attributes.html"}}
+  <div class="roles flexcol">
+    <section class="sheet-body">
+      <div class="distinctions">
+        <h3>Distinctions</h3>
+        <div class="distinction flexrow flex-group-center">
+          {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
         </div>
-
-        <div class="roles flexcol">
-          {{> "systems/earthland/templates/actor/parts/actor-roles.html"}}
-          <br/>
-          <hr/>
-          <br/>
-          {{> "systems/earthland/templates/actor/parts/actor-behaviors.html"}}
+        <br/>
+        <hr/>
+        <br/>
+        <h3>Specialties</h3>
+        <div class="specialty flexrow flex-group-center">
+          {{> "systems/earthland/templates/actor/parts/actor-specialties.html"}}
         </div>
-
-        <div class="distinctions flexcol">
-          <div class="distinction"><!-- flexrow flex-group-center -->
-            <h3>Distinctions</h3>
-            {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
-          </div>
-          <br/>
-          <hr/>
-          <br/>
-          <div class="specialty">
-            <h3>Specialties</h3>
-            {{> "systems/earthland/templates/actor/parts/actor-specialties.html"}}
-          </div>
-          <br/>
-          <hr/>
-          <br/>
-          <div class="complication">
-            <h3>Complications</h3>
-            {{> "systems/earthland/templates/actor/parts/actor-complications.html"}}
-          </div>
+        <br/>
+        <hr/>
+        <br/>
+        <h3>Complications</h3>
+        <div class="complication flexrow flex-group-center">
+          {{> "systems/earthland/templates/actor/parts/actor-complications.html"}}
         </div>
+      </div>
     </section>
   </div>
 
-  {{!-- Monsters have Species Features and Abilities only --}}
-  <div class="tab features" data-group="primary" data-tab="features">
-     {{> "systems/earthland/templates/actor/parts/actor-monster-features.html"}}
-  </div>
+  <div class="abilities flexcol">
+    <div class="abilities">
+      <h3>Abilities</h3>
+      <ol class="items-list">
+        <li class="item flexrow items-header">
+          <div class="item-name">Name</div>
+          <div class="item-name">Action</div>
+          <div class="item-controls">
+            <a class="item-control item-create" title="Create Ability" data-type="ability"><i class="fas fa-plus"></i> Add Ability</a>
+          </div>
+        </li>
+        {{#each abilities as |ability id|}}
+          <li class="item flexrow" data-item-id="{{ability._id}}">
+            <div class="item-name">
+              <div class="item-image">
+                <a class="rollable" data-roll-type="item"><img src="{{ability.img}}" title="{{ability.name}}" width="24" height="24"/></a>
+              </div>
+              <h4>{{ability.name}}</h4>
+            </div>
+            <div class="item-name">
+              {{#if ability.system.dice}}
+                <button title="Add to Dice-Pool" class="role rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject ability.system.dice.value}}" data-label="{{ability.name}}" data-kind="ability"><i class="fas fa-dice-d20"></i></button>
+              {{/if}}
+            </div>
+            <div class="item-controls">
+              <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            </div>
+          </li>
+        {{/each}}
+      </ol>
+    </div>
+    <br/>
+    <hr/>
+    <br/>
 
-  {{!-- Relationships --}}
-  <div class="tab features" data-group="primary" data-tab="relationships">
-     {{> "systems/earthland/templates/actor/parts/actor-relationships.html"}}
-  </div>
+    {{> "systems/earthland/templates/actor/parts/actor-spells.html"}}
 
-  {{!-- Owned Milestones Tab --}}
-  <div class="tab milestones" data-group="primary" data-tab="milestones">
-    {{> "systems/earthland/templates/actor/parts/actor-monster-goals.html"}}
-  </div>
-
-  {{!-- Active Effects Tab --}}
-  <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-    {{> "systems/earthland/templates/actor/parts/actor-effects.html"}}
-  </div>
-
-  {{!-- Biography Tab --}}
-  <div class="tab biography" data-group="primary" data-tab="notes">
-    {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-    {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+    <br/>
+    <hr/>
+    <br/>
+    <div class="gear">
+      <h3>Gear</h3>
+      <ol class="items-list">
+        <li class="item flexrow items-header">
+          <div class="item-name">Name</div>
+          <div class="item-name">Action</div>
+          <div class="item-controls">
+            <a class="item-control item-create" title="Create Item" data-type="item"><i class="fas fa-plus"></i> Add Item</a>
+          </div>
+        </li>
+        {{#each gear as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            <div class="item-name">
+              <div class="item-image">
+                <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+              </div>
+              <h4>{{item.name}}</h4>
+            </div>
+            <div class="item-name">
+              {{#if item.system.dice}}
+                <button title="Add to Dice-Pool" class="role rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject item.system.dice.value}}" data-label="{{item.name}}" data-kind="item"><i class="fas fa-dice-d20"></i></button>
+              {{/if}}
+            </div>
+            <div class="item-controls">
+              <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            </div>
+          </li>
+        {{/each}}
+      </ol>
+    </div>
   </div>
 </section>
+
