--- a/templates/other/gm-bank.html
+++ b/templates/other/gm-bank.html
@@ -44,20 +44,35 @@
           </div>
           <div class="resources grid grid-4col">
             <div class="flex-col pr-0 flex-s-1">
-              <label for="roll_pool">Roll Pool</label>
-              <button class="btn btn-primary-cpt btn-icon clickable roll-pool" type="button"><i class="fa-solid fa-dice"></i></button>
+              <button class="btn btn-primary-cpt btn-icon clickable roll-pool" type="button">
+                <span="roll_pool">Roll Pool</span>
+                <i class="fa-solid fa-dice"></i>
+              </button>
             </div>
             <div class="flex-col pr-0 flex-s-1">
-              <label for="roll_pool">Add NPC</label>
-              <button class="btn btn-primary-cpt btn-icon clickable add-npc" type="button"><i class="fa-solid fa-user-plus"></i></button>
+              <button class="btn btn-primary-cpt btn-icon clickable add-npc" type="button">
+                <label for="roll_pool">Add NPC</label>
+                <i class="fa-solid fa-user-plus"></i>
+              </button>
             </div>
             <div class="flex-col pr-0 flex-s-1">
-              <label for="roll_pool">Create Problem</label>
-              <button class="btn btn-primary-cpt btn-icon clickable create-problem" type="button"><i class="fa-solid fa-circle-exclamation"></i></button>
+              <button class="btn btn-primary-cpt btn-icon clickable create-problem" type="button">
+                <label for="roll_pool">Create Problem</label>
+                <i class="fa-solid fa-circle-exclamation"></i></button>
             </div>
             <div class="flex-col pr-0 flex-s-1">
-              <label for="roll_pool">Use Ability</label>
-              <button class="btn btn-primary-cpt btn-icon clickable use-ability" type="button"><i class="fa-solid fa-hand-sparkles"></i></button>
+              <button class="btn btn-primary-cpt btn-icon clickable use-ability" type="button">
+                <label for="roll_pool">Use Ability</label>
+                <i class="fa-solid fa-hand-sparkles"></i>
+              </button>
+            </div>
+          </div>
+          <div class="resources grid grid-1col">
+            <div class="flex-col flex-s-1">
+              <button class="btn btn-primary-cpt btn-icon clickable create-crisis-pool" type="button">
+                <label for="create_pool">Create Crisis Pool</label>
+                <i class="fa-solid fa-water-ladder"></i></i>
+              </button>
             </div>
           </div>
         </div>
