--- a/templates/item/parts/rollable.html
+++ b/templates/item/parts/rollable.html
@@ -4,6 +4,7 @@
     {{> "systems/earthland/templates/partials/dice/select.html"
       dice=system.dice.value
       edit=true
+      minDice=0
       selectName='system.dice'
     }}
   </div>
