--- a/css/earthland.css
+++ b/css/earthland.css
@@ -2869,3 +2869,90 @@ input[type=color][data-edit][data-edit] {
 .earthland-item .input-cpt option, .earthland-item .color-picker input.color option {
   color: black;
 }
+
+/* ----------------------------------------- */
+/*  Chat Cards
+/* ----------------------------------------- */
+
+.earthland.chat-card {
+  font-style: normal;
+  font-size: 12px;
+}
+
+.earthland.chat-card .card-header {
+  padding: 3px 0;
+  border-top: 2px groove #FFF;
+  border-bottom: 2px groove #FFF;
+}
+
+.earthland.chat-card img {
+  flex: 0 0 36px;
+  margin-right: 5px;
+}
+
+.earthland.chat-card h3 {
+    flex: 1;
+    margin: 0;
+    line-height: 36px;
+    color: olive;
+}
+
+.earthland.chat-card .item-name:hover {
+  color: #111;
+  text-shadow: 0 0 10px red;
+}
+
+
+.earthland.chat-card .card-content {
+    margin: 5px 0;
+    padding: 7px 5px 7px 5px;
+    border: 2px solid darkblue;
+    border-radius: 5px;
+}
+.earthland.chat-card .card-content h3 {
+      font-size: 12px;
+      margin: 0;
+      font-weight: bold;
+}
+
+.earthland.chat-card.card-content > * {
+      -webkit-user-select: text;
+      -moz-user-select: text;
+      -ms-user-select: text;
+      user-select: text;
+}
+
+
+.earthland.chat-card .card-buttons {
+    margin: 5px 0;
+}
+.earthland.chat-card .card-buttons span {
+      display: block;
+      line-height: 28px;
+      text-align: center;
+      border: 1px solid lightgrey;
+}
+
+.earthland.chat-card .card-buttons button {
+      font-size: 12px;
+      height: 24px;
+      line-height: 20px;
+      margin: 2px 0;
+}
+
+.earthland.chat-card .card-footer {
+    padding: 3px 0 0;
+    border-top: 2px groove #FFF;
+}
+
+.earthland.chat-card .card-footer span {
+      border-right: 2px groove #FFF;
+      padding: 0 3px 0 0;
+      font-size: 10px;
+
+}
+
+.earthland.chat-card .card-footer span:last-child {
+        border-right: none;
+        padding-right: 0;
+}
