made pet energy editable until I figure out why custom abilities arent working for pets

--- a/templates/actor/parts/actor-mini-monster-pet.html
+++ b/templates/actor/parts/actor-mini-monster-pet.html
@@ -8,7 +8,7 @@
 <div class="resource flex-group-center">
   <label for="system.energy.value" class="resource-label">Energy</label>
   <div class="resource-content flexrow flex-center flex-between">
-  <input type="text" name="system.energy.value" value="{{system.energy.value}}" data-dtype="Number" {{disabled is_not_gm}}/>
+  <input type="text" name="system.energy.value" value="{{system.energy.value}}" data-dtype="Number" />
   </div>
 </div>
 
