add level to class and subclass

--- a/templates/item/item-class-sheet.html
+++ b/templates/item/item-class-sheet.html
@@ -19,6 +19,11 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
 
       <div class="resource">
+        <label class="resource-label">Class Level</label>
+        <input type="text" name="system.level" value="{{system.level}}" data-dtype="Number"/>
+      </div>
+
+      <div class="resource">
         <label class="resource-label">Requirements</label>
         <input type="text" name="system.requirements" value="{{system.requirements}}" data-dtype="String"/>
       </div>
