--- a/templates/item/item-subclass-sheet.html
+++ b/templates/item/item-subclass-sheet.html
@@ -17,6 +17,12 @@
 
     {{!-- Attributes Tab --}}
     <div class="tab attributes" data-group="primary" data-tab="attributes">
+
+      <div class="resource">
+        <label class="resource-label">Class Level</label>
+        <input type="text" name="system.level" value="{{system.level}}" data-dtype="Number"/>
+      </div>
+
       <div class="resource">
         <label class="resource-label">Class</label>
         <input type="text" name="system.class" value="{{system.class}}" data-dtype="String"/>
